buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.jmolecules.integrations:jmolecules-bytebuddy:0.24.1"
    }
}

plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    id 'io.spring.dependency-management' version '1.1.7'
    alias(libs.plugins.bytebuddy)
}

group = findProperty('group') ?: 'com.naminhyeok.fantazzk'
version = findProperty('version') ?: '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

sourceSets {
    integrationTest {
        java.srcDir file('src/integrationTest/java')
        resources.srcDir file('src/integrationTest/resources')
        compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }
}

configurations {
    integrationTestImplementation.extendsFrom implementation, testImplementation
    integrationTestRuntimeOnly.extendsFrom runtimeOnly, testRuntimeOnly
}

dependencies {
    implementation platform(libs.spring.modulith.bom)
    implementation platform(libs.jmolecules.bom)

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
    implementation 'org.springframework.modulith:spring-modulith-starter-insight'
    implementation libs.jmolecules.starter.ddd
    implementation libs.jmolecules.spring
    implementation libs.jmolecules.jpa
    implementation libs.springdoc.openapi
    implementation libs.sentry.spring.boot4
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.springframework.boot:spring-boot-liquibase'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    runtimeOnly 'org.postgresql:postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    testImplementation libs.archunit.junit5
    testImplementation libs.jmolecules.archunit
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'com.h2database:h2'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-test'
    integrationTestImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    integrationTestImplementation 'org.springframework.boot:spring-boot-restclient'
    integrationTestImplementation 'org.springframework.boot:spring-boot-resttestclient'
    integrationTestImplementation 'org.springframework.boot:spring-boot-data-jpa-test'
    integrationTestImplementation 'org.springframework.boot:spring-boot-jdbc-test'
    integrationTestRuntimeOnly 'org.testcontainers:jdbc:1.21.4'
    integrationTestRuntimeOnly 'org.testcontainers:postgresql:1.21.4'
    integrationTestRuntimeOnly 'com.h2database:h2'
    integrationTestRuntimeOnly 'org.postgresql:postgresql'
    integrationTestCompileOnly 'org.projectlombok:lombok'
    integrationTestAnnotationProcessor 'org.projectlombok:lombok'
}

byteBuddy {
    transformation {
        plugin = org.jmolecules.bytebuddy.JMoleculesPlugin
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

tasks.register('integrationTest', Test) {
    description = 'Runs integration tests.'
    group = LifecycleBasePlugin.VERIFICATION_GROUP
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    environment 'TESTCONTAINERS_RYUK_DISABLED', 'true'
    shouldRunAfter(tasks.test)
    useJUnitPlatform()
}

tasks.register('openapiBootRun', JavaExec) {
    description = 'Runs the application with the test runtime classpath for OpenAPI export.'
    group = 'documentation'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.naminhyeok.fantazzk.FantazzkApplication'
    dependsOn(tasks.testClasses)
}

tasks.named('processIntegrationTestResources') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
